add button animation

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
           <p class="font-montserrat max-w-lg mt-5 mb-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
             elit tellus,
             luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
-          <button class="text-lg px-8 py-4 border-2 ">Discover More</button>
+          <button
+            class="text-lg px-8 py-4 border-2 border-amber-400 text-amber-400 hover:text-white duration-200 hover:tracking-wide hover:bg-amber-400">Discover
+            More</button>
+
         </div>
       </div>
     </div>
@@ -81,7 +84,9 @@
               tellus,
               luctus
               nec ullamcorper mattis, pulvinar dapibus leo.</P>
-            <button class="text-lg px-8 py-4 border-2 border-black">Discover More</button>
+            <button
+              class="text-lg px-8 py-4 border-2 border-black hover:border-slate-700 hover:text-white duration-200 hover:tracking-wide hover:bg-slate-700">Discover
+              More</button>
           </div>
         </div>
         <div class="md:flex mt-7 md:mt-28 gap-x-12 mb-3">
@@ -122,7 +127,9 @@
             <h1 class="text-7xl">movie collection</h1>
           </div>
           <div>
-            <button class="text-lg px-8 py-4 border-2  ">see more movies</button>
+            <button
+              class="text-lg px-8 py-4 border-2 border-white  hover:text-black duration-200 hover:tracking-wide hover:bg-white">Discover
+              More</button>
           </div>
         </div>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 mt-8">
